--- a/public/assets/less/lend.less
+++ b/public/assets/less/lend.less
@@ -19,7 +19,7 @@
 }
 #mobile-results-desc {
     background-color: #f9f9f9;
-    padding: 20px;
+    padding: 20px 15px;
     margin-bottom: -20px;
     @media (min-width: @screen-md-min) {
         display: none;
