--- a/public/assets/less/nav.less
+++ b/public/assets/less/nav.less
@@ -9,6 +9,11 @@
 		display: inline-block;
 	}
 }
+li.dropdown {
+	@media (max-width: @screen-xs-max) {
+		display: block;
+	}
+}
 .navbar-default .navbar-text {
 	color: #777777;
 }
